# svmp-quaternion-qcp

./: CITATION.cff  CMakeLists.txt  README.md  vcpkg.json
include/: ConvexConcavitiesFactory.h  SymmetryBreaker.h  UpperBoundProvider.h
src/: ConvexConcavitiesFactory.cpp  SymmetryBreaker.cpp  UpperBoundProvider.cpp
targets/: ConcaveQCP.cpp  ConcaveQCPBenchmark.cpp  ConvexQCP.cpp  ConvexQCPBenchmark.cpp  ConvexQCPInverse.cpp  ConvexQCPInverseBenchmark.cpp  ConvexQCPSCIPBenchmark.cpp  ConvexQCPSCIPInverse.cpp  VisualizeConcavities.cpp  VisualizeSymmetry.cpp
